# django-bulk-update-or-create

./: .gitignore  LICENSE  Makefile  README.md  README.rst  setup.cfg  tox.ini
.github/workflows/: publish-dev.yml  publish.yml  test.yml
bulk_update_or_create/: __init__.py  apps.py  locks.py  models.py  query.py
database_locks/migrations/: 0001_initial.py
tests/: README.md  manage.py  pytest.ini  requirements.txt  settings.py  settings_mysql.py  settings_postgresql.py  urls.py
tests/tests/: models.py  tests.py
tests/tests/management/commands/: bulk_it.py  db_lock_it.py
tests/tests/migrations/: 0001_initial.py
