[metadata]
name = django-database-locks
version = 0.3
description =  Distributed locks for Django using DB (MySQL/Postgres).
long_description = file: README.rst
author = Filipe Pina
author_email = fopina@gmail.com
url = https://github.com/fopina/django-database-locks
download_url = https://pypi.org/project/django-database-locks/
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
install_requires =
    Django >= 2.2
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
exclude = conf.py
ignore = E203,W503
max-line-length = 88

[coverage:run]
source = database_locks
